[package]
name = "sinker"
version = "0.1.0"
license = "MIT"
edition = "2021"
keywords = ["kubernetes"]
repository = "https://github.com/influxdata/sinker"
authors = ["Marko Mikulicic <mkm@influxdata.com>"]
description = "Copy k8s resources (or parts thereof) across clusters"

[dependencies]
clap = { version = "4.4", features = ["derive", "help", "env", "std"] }
futures = "0.3"
kube = { version = "0.85.0", features = ["runtime", "derive"] }
kube-derive = "0.84.0"
k8s-openapi = { version = "0.19.0", features = ["v1_26"] }
kubert = { version = "0.19.0", features = [
    "clap",
    "runtime",
    "server",
    "rustls-tls",
] }
tokio = { version = "1.26", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
schemars = "0.8.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"
thiserror = "1"
serde_json_path = "0.6.3"

[dev-dependencies]
rstest = "0.17.0"
