[package]
name = "sinker"
version = "0.1.0"
license = "MIT"
edition = "2021"
keywords = ["kubernetes"]
repository = "https://github.com/influxdata/sinker"
authors = ["Marko Mikulicic <mkm@influxdata.com>"]
description = "Copy k8s resources (or parts thereof) across clusters"

[dependencies]
clap = { version = "4.5", features = ["derive", "help", "env", "std"] }
futures = "0.3"
kube = { version = "1.1.0", features = ["runtime", "derive", "unstable-runtime"] }
kube-derive = "2.0.1"
k8s-openapi = { version = "0.25.0", features = ["v1_33", "schemars"] }
kubert = { version = "0.25.0", features = [
    "clap",
    "runtime",
    "server",
    "rustls-tls",
    "prometheus-client",
] }
tokio = { version = "1.44", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
thiserror = "2"
serde_json_path = "0.7.2"
tokio-context = "0.1.*"
tokio-stream = "0.1.*"

[dev-dependencies]
rstest = "0.26.1"
once_cell = "1.21.*"
chrono = "0.4.*"
rand = "0.8.5"
