[package]
name = "sinker"
version = "0.1.0"
license = "MIT"
edition = "2021"
keywords = ["kubernetes"]
repository = "https://github.com/influxdata/sinker"
authors = ["InfluxData"]
description = "Copy k8s resources (or parts thereof) across clusters"

[dependencies]
clap = { version = "^4.5.53", features = ["derive", "help", "env", "std"] }
futures = "^0.3.31"
kube = { version = "^1.1.0", features = ["runtime", "derive", "unstable-runtime"] }
k8s-openapi = { version = "^0.25.0", features = ["v1_33", "schemars"] }
kubert = { version = "^0.25.0", features = [
    "clap",
    "runtime",
    "server",
    "rustls-tls",
    "prometheus-client",
] }
tokio = { version = "^1.48.0", features = ["full"] }
anyhow = { version = "^1.0.100", features = ["backtrace"] }
tracing = "^0.1.43"
schemars = "^0.8.22"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.147"
serde_yaml = "^0.9.34"
thiserror = "^2.0.17"
serde_json_path = "^0.7.2"
tokio-context = "^0.1.3"
tokio-stream = "^0.1.17"
regex = "^1.12.2"

[dev-dependencies]
rstest = "^0.26.1"
once_cell = "^1.21.3"
chrono = "^0.4.42"
rand = "^0.9.2"
